Remove guava dependency